# cuptir

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  pixi.toml
.github/workflows/: build.yml  check.yml  format.yml
crates/example-utils/: Cargo.toml
crates/example-utils/src/: lib.rs
examples/: activity.rs  callback.rs  candle.rs  system.rs  unified_memory.rs
src/: activity.rs  callback.rs  driver.rs  error.rs  lib.rs  runtime.rs  utils.rs
src/activity/: device.rs  environment.rs  kernel.rs  memcpy.rs  memory.rs  memory_pool.rs  mod.rs  pcie.rs  uvm.rs
src/callback/: driver.rs  mod.rs  runtime.rs
src/profiling_host/: mod.rs
