[workspace]
members = ["crates/example-utils"]

[workspace.dependencies]
cudarc = { path = "thirdparty/cudarc", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"

[package]
name = "cuptir"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
serde = ["dep:serde", "uuid/serde"]
# In order to control how cudarc links to cupti, we need to mimic its features to cover all use
# cases. Only one type of linking can be enabled at a time.
static-linking = ["cudarc/static-linking", "cuptir-example-utils/static-linking"]
dynamic-linking = ["cudarc/dynamic-linking", "cuptir-example-utils/dynamic-linking"]
dynamic-loading = ["cudarc/dynamic-loading", "cuptir-example-utils/dynamic-loading"]
# We're not supporting the cuda-from-build-system feature in cudarc, because it uses nvcc to figure
# out the version. Only support these for now :tm:, they need to be explicitly set:
cuda-12060 = ["cudarc/cuda-12060", "cuptir-example-utils/cuda-12060"]
cuda-12080 = ["cudarc/cuda-12080", "cuptir-example-utils/cuda-12080"]
cuda-12090 = ["cudarc/cuda-12090", "cuptir-example-utils/cuda-12090"]
cuda-13000 = ["cudarc/cuda-13000", "cuptir-example-utils/cuda-13000"]

[dependencies]
strum = { version = "0.27", features = ["derive"] }
cpp_demangle = "0.4.4"
serde = { version = "1.0.129", features = ["derive"], optional = true }
thiserror = "2.0.12"
cudarc = { workspace = true, default-features = false, features = [
  "cupti",
  "std",
] }
tracing.workspace = true
uuid = { version = "1.18.1", default-features = false, features = ["serde"] }

[dev-dependencies]
serial_test = "3.2.0"
cuptir-example-utils = { path = "crates/example-utils" }
tracing-subscriber.workspace = true
tracing.workspace = true
cudarc = { workspace = true, default-features = false, features = [
  "cupti",
  "runtime",
  "std",
] }

[build-dependencies]
bindgen = "0.72.1"
syn = { version = "2.0.106", features = ["full"] }
convert_case = "0.8.0"
quote = "1.0.40"
prettyplease = "0.2.37"
proc-macro2 = "1.0.101"
anyhow = "1.0.99"
tracing-subscriber.workspace = true
tracing.workspace = true
cudarc = { workspace = true, default-features = false, features = [
  "cupti",
  "std",
  "nvrtc",
] }
