[package]
name = "cuptir-example-utils"
version.workspace = true
edition.workspace = true

[features]
default = []
static-linking = ["cudarc/static-linking"]
dynamic-linking = ["cudarc/dynamic-linking"]
dynamic-loading = ["cudarc/dynamic-loading"]
cuda-12060 = ["cudarc/cuda-12060"]
cuda-12080 = ["cudarc/cuda-12080"]
cuda-12090 = ["cudarc/cuda-12090"]
cuda-13000 = ["cudarc/cuda-13000"]

[dependencies]
cudarc = { workspace = true, features = [
    "cupti",
    "std",
    "nvrtc",
] }
